k8s/base/kafka-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-app-service
spec:
  selector:
    app: kafka-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
